--- a/hello.html
+++ b/hello.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>This is for hello world testing</h1>
+    <h1>This is for hello world testing!</h1>
     <h2>Hello too</h2>
     Hello, World
 </body>
